grammars/MiniCParser.cpp

#include <vector>
#include "Program.h"
#include "Declarations.h"
#include "Statements.h"
#include "Exprs.h"
#include "Terms.h"
#include <iostream>


// Generated from MiniC.g4 by ANTLR 4.9


#include "MiniCListener.h"

#include "MiniCParser.h"


using namespace antlrcpp;
using namespace antlr4;

MiniCParser::MiniCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MiniCParser::~MiniCParser() {
  delete _interpreter;
}

std::string MiniCParser::getGrammarFileName() const {
  return "MiniC.g4";
}

const std::vector<std::string>& MiniCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MiniCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

MiniCParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniCParser::ProgContext::EOF() {
  return getToken(MiniCParser::EOF, 0);
}

MiniCParser::PreambleContext* MiniCParser::ProgContext::preamble() {
  return getRuleContext<MiniCParser::PreambleContext>(0);
}

std::vector<MiniCParser::DeclContext *> MiniCParser::ProgContext::decl() {
  return getRuleContexts<MiniCParser::DeclContext>();
}

MiniCParser::DeclContext* MiniCParser::ProgContext::decl(size_t i) {
  return getRuleContext<MiniCParser::DeclContext>(i);
}


size_t MiniCParser::ProgContext::getRuleIndex() const {
  return MiniCParser::RuleProg;
}

void MiniCParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void MiniCParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}

MiniCParser::ProgContext* MiniCParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, MiniCParser::RuleProg);

      dynamic_cast<ProgContext *>(_localctx)->val =  new minicc::Program();
      _localctx->val->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());

  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MiniCParser::T__0: {
        setState(42);
        preamble();
         _localctx->val->setSyslibFlag(true); 
        break;
      }

      case MiniCParser::EOF:
      case MiniCParser::T__16:
      case MiniCParser::T__17:
      case MiniCParser::T__18: {
         _localctx->val->setSyslibFlag(false); 
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(53);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniCParser::T__16)
      | (1ULL << MiniCParser::T__17)
      | (1ULL << MiniCParser::T__18))) != 0)) {
      setState(48);
      dynamic_cast<ProgContext *>(_localctx)->declContext = decl();
      _localctx->val->addChild(dynamic_cast<ProgContext *>(_localctx)->declContext->val); 
      setState(55);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(56);
    match(MiniCParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PreambleContext ------------------------------------------------------------------

MiniCParser::PreambleContext::PreambleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniCParser::PreambleContext::getRuleIndex() const {
  return MiniCParser::RulePreamble;
}

void MiniCParser::PreambleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreamble(this);
}

void MiniCParser::PreambleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreamble(this);
}

MiniCParser::PreambleContext* MiniCParser::preamble() {
  PreambleContext *_localctx = _tracker.createInstance<PreambleContext>(_ctx, getState());
  enterRule(_localctx, 2, MiniCParser::RulePreamble);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(MiniCParser::T__0);
    setState(59);
    match(MiniCParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

MiniCParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniCParser::VardeclContext* MiniCParser::DeclContext::vardecl() {
  return getRuleContext<MiniCParser::VardeclContext>(0);
}

MiniCParser::RettypeContext* MiniCParser::DeclContext::rettype() {
  return getRuleContext<MiniCParser::RettypeContext>(0);
}

MiniCParser::FuncnameContext* MiniCParser::DeclContext::funcname() {
  return getRuleContext<MiniCParser::FuncnameContext>(0);
}

MiniCParser::ParametersContext* MiniCParser::DeclContext::parameters() {
  return getRuleContext<MiniCParser::ParametersContext>(0);
}

MiniCParser::ScopeContext* MiniCParser::DeclContext::scope() {
  return getRuleContext<MiniCParser::ScopeContext>(0);
}


size_t MiniCParser::DeclContext::getRuleIndex() const {
  return MiniCParser::RuleDecl;
}

void MiniCParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void MiniCParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}

MiniCParser::DeclContext* MiniCParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, MiniCParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(61);
      dynamic_cast<DeclContext *>(_localctx)->vardeclContext = vardecl();
      dynamic_cast<DeclContext *>(_localctx)->val =  dynamic_cast<DeclContext *>(_localctx)->vardeclContext->val; 
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(64);
      dynamic_cast<DeclContext *>(_localctx)->rettypeContext = rettype();
      setState(65);
      dynamic_cast<DeclContext *>(_localctx)->funcnameContext = funcname();
      setState(66);
      match(MiniCParser::T__2);
      setState(67);
      dynamic_cast<DeclContext *>(_localctx)->parametersContext = parameters();
      setState(68);
      match(MiniCParser::T__3);
      setState(69);
      dynamic_cast<DeclContext *>(_localctx)->scopeContext = scope();

                  dynamic_cast<DeclContext *>(_localctx)->func =  new minicc::FuncDeclaration();
                  _localctx->func->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
                  _localctx->func->addChild(dynamic_cast<DeclContext *>(_localctx)->rettypeContext->val);
                  _localctx->func->addChild(dynamic_cast<DeclContext *>(_localctx)->funcnameContext->val);
                  for (size_t i = 0; i < dynamic_cast<DeclContext *>(_localctx)->parametersContext->val.size(); i++)
                      _localctx->func->addChild(dynamic_cast<DeclContext *>(_localctx)->parametersContext->val[i]);
                  _localctx->func->addChild(dynamic_cast<DeclContext *>(_localctx)->scopeContext->val);
                  _localctx->func->setHasBody(true);
                  dynamic_cast<DeclContext *>(_localctx)->val =  _localctx->func;
              
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(72);
      dynamic_cast<DeclContext *>(_localctx)->rettypeContext = rettype();
      setState(73);
      dynamic_cast<DeclContext *>(_localctx)->funcnameContext = funcname();
      setState(74);
      match(MiniCParser::T__2);
      setState(75);
      dynamic_cast<DeclContext *>(_localctx)->parametersContext = parameters();
      setState(76);
      match(MiniCParser::T__3);
      setState(77);
      match(MiniCParser::T__4);

                  dynamic_cast<DeclContext *>(_localctx)->func =  new minicc::FuncDeclaration();
                  _localctx->func->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
                  _localctx->func->addChild(dynamic_cast<DeclContext *>(_localctx)->rettypeContext->val);
                  _localctx->func->addChild(dynamic_cast<DeclContext *>(_localctx)->funcnameContext->val);
                  for (size_t i = 0; i < dynamic_cast<DeclContext *>(_localctx)->parametersContext->val.size(); i++)
                      _localctx->func->addChild(dynamic_cast<DeclContext *>(_localctx)->parametersContext->val[i]);
                  _localctx->func->setHasBody(false);
                  dynamic_cast<DeclContext *>(_localctx)->val =  _localctx->func;
              
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclContext ------------------------------------------------------------------

MiniCParser::VardeclContext::VardeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniCParser::VartypeContext* MiniCParser::VardeclContext::vartype() {
  return getRuleContext<MiniCParser::VartypeContext>(0);
}

MiniCParser::VarlistContext* MiniCParser::VardeclContext::varlist() {
  return getRuleContext<MiniCParser::VarlistContext>(0);
}


size_t MiniCParser::VardeclContext::getRuleIndex() const {
  return MiniCParser::RuleVardecl;
}

void MiniCParser::VardeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardecl(this);
}

void MiniCParser::VardeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardecl(this);
}

MiniCParser::VardeclContext* MiniCParser::vardecl() {
  VardeclContext *_localctx = _tracker.createInstance<VardeclContext>(_ctx, getState());
  enterRule(_localctx, 6, MiniCParser::RuleVardecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    dynamic_cast<VardeclContext *>(_localctx)->vartypeContext = vartype();
    setState(83);
    dynamic_cast<VardeclContext *>(_localctx)->varlistContext = varlist(0);
    setState(84);
    match(MiniCParser::T__4);

            dynamic_cast<VardeclContext *>(_localctx)->val =  new minicc::VarDeclaration();
            _localctx->val->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
            _localctx->val->addChild(dynamic_cast<VardeclContext *>(_localctx)->vartypeContext->val);
            for (size_t i = 0; i < dynamic_cast<VardeclContext *>(_localctx)->varlistContext->val.size(); i++)
                _localctx->val->addChild(dynamic_cast<VardeclContext *>(_localctx)->varlistContext->val[i]);
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScopeContext ------------------------------------------------------------------

MiniCParser::ScopeContext::ScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MiniCParser::VardeclContext *> MiniCParser::ScopeContext::vardecl() {
  return getRuleContexts<MiniCParser::VardeclContext>();
}

MiniCParser::VardeclContext* MiniCParser::ScopeContext::vardecl(size_t i) {
  return getRuleContext<MiniCParser::VardeclContext>(i);
}

std::vector<MiniCParser::StmtContext *> MiniCParser::ScopeContext::stmt() {
  return getRuleContexts<MiniCParser::StmtContext>();
}

MiniCParser::StmtContext* MiniCParser::ScopeContext::stmt(size_t i) {
  return getRuleContext<MiniCParser::StmtContext>(i);
}


size_t MiniCParser::ScopeContext::getRuleIndex() const {
  return MiniCParser::RuleScope;
}

void MiniCParser::ScopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScope(this);
}

void MiniCParser::ScopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScope(this);
}

MiniCParser::ScopeContext* MiniCParser::scope() {
  ScopeContext *_localctx = _tracker.createInstance<ScopeContext>(_ctx, getState());
  enterRule(_localctx, 8, MiniCParser::RuleScope);

      dynamic_cast<ScopeContext *>(_localctx)->val =  new minicc::ScopeStatement();
      _localctx->val->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
      dynamic_cast<ScopeContext *>(_localctx)->declcnt =  0;

  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(MiniCParser::T__5);
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MiniCParser::T__16

    || _la == MiniCParser::T__17) {
      setState(88);
      dynamic_cast<ScopeContext *>(_localctx)->vardeclContext = vardecl();

              _localctx->val->addChild(dynamic_cast<ScopeContext *>(_localctx)->vardeclContext->val);
              _localctx->declcnt ++;
          
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniCParser::T__2)
      | (1ULL << MiniCParser::T__5)
      | (1ULL << MiniCParser::T__7)
      | (1ULL << MiniCParser::T__9)
      | (1ULL << MiniCParser::T__10)
      | (1ULL << MiniCParser::T__11)
      | (1ULL << MiniCParser::T__12)
      | (1ULL << MiniCParser::T__19)
      | (1ULL << MiniCParser::T__29)
      | (1ULL << MiniCParser::T__33)
      | (1ULL << MiniCParser::T__34)
      | (1ULL << MiniCParser::ID)
      | (1ULL << MiniCParser::INT))) != 0)) {
      setState(96);
      dynamic_cast<ScopeContext *>(_localctx)->stmtContext = stmt();

              _localctx->val->addChild(dynamic_cast<ScopeContext *>(_localctx)->stmtContext->val);
          
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    match(MiniCParser::T__6);

            _localctx->val->setNumVarDecl(_localctx->declcnt);
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

MiniCParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniCParser::ExprContext* MiniCParser::StmtContext::expr() {
  return getRuleContext<MiniCParser::ExprContext>(0);
}

std::vector<MiniCParser::StmtContext *> MiniCParser::StmtContext::stmt() {
  return getRuleContexts<MiniCParser::StmtContext>();
}

MiniCParser::StmtContext* MiniCParser::StmtContext::stmt(size_t i) {
  return getRuleContext<MiniCParser::StmtContext>(i);
}

std::vector<MiniCParser::ExproptContext *> MiniCParser::StmtContext::expropt() {
  return getRuleContexts<MiniCParser::ExproptContext>();
}

MiniCParser::ExproptContext* MiniCParser::StmtContext::expropt(size_t i) {
  return getRuleContext<MiniCParser::ExproptContext>(i);
}

MiniCParser::ScopeContext* MiniCParser::StmtContext::scope() {
  return getRuleContext<MiniCParser::ScopeContext>(0);
}


size_t MiniCParser::StmtContext::getRuleIndex() const {
  return MiniCParser::RuleStmt;
}

void MiniCParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void MiniCParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}

MiniCParser::StmtContext* MiniCParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 10, MiniCParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(159);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(107);
      dynamic_cast<StmtContext *>(_localctx)->exprContext = expr(0);
      setState(108);
      match(MiniCParser::T__4);

              dynamic_cast<StmtContext *>(_localctx)->val =  new minicc::ExprStatement();
              _localctx->val->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
              _localctx->val->addChild(dynamic_cast<StmtContext *>(_localctx)->exprContext->val);
          
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(111);
      match(MiniCParser::T__7);
      setState(112);
      match(MiniCParser::T__2);
      setState(113);
      dynamic_cast<StmtContext *>(_localctx)->exprContext = expr(0);
      setState(114);
      match(MiniCParser::T__3);
      setState(115);
      dynamic_cast<StmtContext *>(_localctx)->stmtContext = stmt();

              dynamic_cast<StmtContext *>(_localctx)->val =  new minicc::IfStatement();
              _localctx->val->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
              _localctx->val->addChild(dynamic_cast<StmtContext *>(_localctx)->exprContext->val);
              _localctx->val->addChild(dynamic_cast<StmtContext *>(_localctx)->stmtContext->val);
          
      break;
    }
